# snips

./: .gitignore
asm/: rdtsc.c
bpf/: constants.py  hgbpf.py  sym_driver.py  tracegen.py
bpf/bccutils/: __init__.py  collector.py  common.py  prepper.py  print_utils.py  sym_mapper.py  templates.py  tracer.py
bpf/bccutils/templates/: bpf_base.c  bpf_comm.c  bpf_kprobe_aggr.c  bpf_p2p.c  bpf_p2p_uprobe.c  bpf_softirq.c  bpf_uprobe.c  bpf_uprobe_aggr.c  bpf_uprobe_stack.c  bpf_uprobe_stack_aggr.c
cpp/: Makefile  bound_bench.cpp  common.h  comp_bench.cpp  iobench.cpp  lower_bound.cpp  malloc.cc  mutex_bench.cpp  panfs_bench.cc  shm-server.cpp  sort_bench.cpp
cpp/fi_bench/: .gitignore  CMakeLists.txt  benchmark.cpp  benchmark.h  client.cpp  client.h  client_main.cpp  common.cc  common.h  config.h  endpoint.cpp  endpoint.h  fabric.cpp  fabric.h  fabric_utils.h  run.sh  server.cpp  server.h  server_main.cpp
cpp/sharing/: Makefile  README  atcvrt.h  atpollrt.h  atpollrt2.h  benchmark  benchmark.cpp  common.h  cvrt.h  gdb_history  sigrt.h
io/blkid/: CMakeLists.txt  run_blkid.cc
latex/template/: latexmkrc.template  main.tex
latex/template/data/plot_scripts/: common.py  paper.mplstyle
mpi/: mpi_comm.cc  mpi_openmp_vtune.sh  mpi_split_comm.cc  placement.cc  placement.sh
mpiperf/: mpihelloworld.c  mpiperfmon.cc  run.sh  wrapper.sh
perf/: Makefile  code.c  ctrlfd.c  perf-script.py  script.sh
rust-exps/: README.md
rust-exps/interop/: CMakeLists.txt  Cargo.toml
rust-exps/interop-2/: CMakeLists.txt  script.sh
rust-exps/interop-2/rust_lib/: CMakeLists.txt  Cargo.toml  cbindgen.toml
rust-exps/interop-2/rust_lib/src/: lib.rs
rust-exps/interop-2/src/: main.cpp
rust-exps/interop/include/: point.h
rust-exps/interop/src/: lib.rs  main.cpp
rustos/01_frb/: CREDITS
rustos/01_frb/blog_os/: Cargo.toml
scripts/: activate_conda.sh  centos8-lustre-setup-worker.sh  centos8-lustre-setup.sh  check_narwhal.yaml  cleanup.sh  common.sh  copilot.sh  debug.sh  dfsumb-basic.py  emulab-workflow.sh  emulab-wrappers.sh  fstrim-cluster.sh  gdb-multi.sh  gdbwait.sh  get-write-sum.sh  install-mpi.sh  launch.sh  local-mount.sh  log-throttlers.sh  lustre-build-ub2204.sh  lustre-mount.sh  modbed.py  nw-exp.sh  panfs-kernel.sh  panfs-mount.sh  panfs.sh  perf-perm.sh  perfstats-cp.sh  poll-all.sh  psig.sh  ray.sh  run-ansible.sh  run-cdf-tests.sh  setup-cart.sh  setup-cart2.sh  setup-default-rdma.sh  setup-docker.sh  setup-narwhal.sh  setup-proxy.sh  setup-rdma.sh  (+12 more)
scripts/cl/: mod-config.py  setup-cloudlab.sh
scripts/triton_scripts/: cluster.conf.in  node.conf.in  setup.sh  themisrc.in
scripts/workflows/: bccbpf.sh  bccsingle.sh  benchmon.sh  build-pytorch.sh  buildorca.sh  chconfig.xml  chsrvconfig.yaml  clickhouse-exp.py  clickhouse.sh  fabtests.sh  gdb_history  gdbbyrank.sh  hosts.txt  install-docker.sh  lustre-ltpmap.txt  lustre-rescue.sh  prometheus.sh  rust_env.sh  rust_opt.sh  setupkdump.sh
